--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@tailwindcss/typography": "^0.4.1",
     "next": "10.2.3",
+    "next-mdx-remote": "^3.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark-html": "^13.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.2",
+    "prettier": "^2.3.1",
+    "tailwindcss": "^2.1.4"
   }
 }
